feat: display dev mode
